hadra-lang/src/test/resources/net/vpc/hadralang/test/compiler/success/testCompilerSuccess0045.hl
Map<int,string> map;
map={15:"fifteen",1:"one"};
map+={15:"fifteen"};
map+={15:"fifteen",1:"one"};
for(e:map){
    println(e.key+","+e.value?nullable?name);
}
